# benchmark-source-controls

./: .env  .mise.toml  README.md  bench.sh
go-gorilla-mux/: go.mod  go.sum  main.go
node-express/: index.js  package.json  pnpm-lock.yaml
node-fastify/: index.js  package.json  pnpm-lock.yaml
ruby-puma/: Gemfile  app.rb  config.ru
rust-axum/: Cargo.toml
rust-axum/src/: main.rs
